# BOLA

ЛР1/: CMakeLists.txt  Timer.h
ЛР1/client/: main.cpp
ЛР1/server/: main.cpp
ЛР2/: ARINC429.h  CMakeLists.txt  MIL1553.h  Timer.h  transform.cpp  transform.h
ЛР2/ins/: Ins.cpp  Ins.h  main.cpp
ЛР2/server/: main.cpp
ЛР2/sns/: Sns.cpp  Sns.h  main.cpp
ЛР2/tmp/: Lab2.cpp  Protocol (1).h  ServerBOLA.cpp  bin (1).h  bin.h  protocol.h
ЛР3/: CMakeLists.txt  linalg.cpp  linalg.h  mth.cpp  mth.h  transform.cpp  transform.h
ЛР3/aircraft/: Aircraft.cpp  Aircraft.h
ЛР3/ins/: Ins.cpp  Ins.h  main.cpp
ЛР3/server/: main.cpp
